--- a/index.html
+++ b/index.html
@@ -204,12 +204,12 @@
       <div class="w3-bar">
     <a href="https://cryptorotator.website/ltc_play/?r=saroj433@gmail.com" class="w3-button w3-round w3-teal" style="width:20%">Litecoin</a>
     <a href="https://cryptorotator.website/trx_play/?r=saroj433@gmail.com" class="w3-button w3-round w3-black" style="width:20%">Tron</a>
-    <a href="https://cryptorotator.website/eth_play/?r=saroj433@gmail.com" class="w3-button w3-round w3-teal" style="width:20%">Ethereum</a>
-    <a href="https://cryptorotator.website/doge_play/?r=saroj433@gmail.com" class="w3-button w3-round w3-black" style="width:20%">Dogecoin</a><p></p>
-    <a href="https://cryptorotator.website/bch_play/?r=saroj433@gmail.com" class="w3-button w3-round w3-black" style="width:20%">Bitcoincash</a>
-    <a href="https://cryptorotator.website/dgb_play/?r=saroj433@gmail.com" class="w3-button w3-round w3-teal" style="width:20%">Digibyte</a>
-    <a href="https://cryptorotator.website/zec_play/?r=saroj433@gmail.com" class="w3-button w3-round w3-black" style="width:20%">Zcash</a>
-    <a href="https://cryptorotator.website/dash_play/?r=saroj433@gmail.com" class="w3-button w3-round w3-teal" style="width:20%">Dash</a><p></p>
+
+    <a href="https://cryptorotator.website/doge_play/?r=saroj433@gmail.com" class="w3-button w3-round w3-teal" style="width:20%">Dogecoin</a><p></p>
+
+    <a href="https://cryptorotator.website/dgb_play/?r=saroj433@gmail.com" class="w3-button w3-round w3-black" style="width:20%">Digibyte</a>
+    <a href="https://cryptorotator.website/zec_play/?r=saroj433@gmail.com" class="w3-button w3-round w3-teal" style="width:20%">Zcash</a>
+    <a href="https://cryptorotator.website/dash_play/?r=saroj433@gmail.com" class="w3-button w3-round w3-black" style="width:20%">Dash</a><p></p>
     <a href="https://cryptorotator.website/shine_ltc/?r=saroj433@gmail.com" class="w3-button w3-round w3-teal" style="width:20%">Litecoin2</a>
     <a href="https://cryptorotator.website/shine_trx/?r=saroj433@gmail.com" class="w3-button w3-round w3-black" style="width:20%">Tron 2</a>
     <a href="https://cryptorotator.website/shine_eth/?r=saroj433@gmail.com" class="w3-button w3-round w3-teal" style="width:20%">Ethereum2</a>
