--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
             <a href="https://www.bitcoinfaucet.network/home.html?r=1GZ4P5eSm9WcUAX2ktNpLaJ3PaGnhzYmh1" class="w3-button w3-round w3-black" style="width:60%">Faucet network 2 sats 5 mins</a>
            <p></p>
         <a href="https://www.coinfaucet.network/home.html?r=1GZ4P5eSm9WcUAX2ktNpLaJ3PaGnhzYmh1" class="w3-button w3-round w3-teal" style="width:60%">coin network 2 sats 5 mins</a><p></p>
-        <a href="https://iqfaucet.com/btc/?ref=3641" class="w3-button w3-round w3-black" style="width:60%">IQFaucet 1+ sats 5 mins</a><p></p>
+        <a href="http://fautsy.com/?r=1GZ4P5eSm9WcUAX2ktNpLaJ3PaGnhzYmh1" class="w3-button w3-round w3-black" style="width:60%">Fautsy 1+ sats 10 mins</a><p></p>
         <a href="http://starbits.io/?r=1GZ4P5eSm9WcUAX2ktNpLaJ3PaGnhzYmh1" class="w3-button w3-round w3-teal" style="width:60%">Starbits 1 sats 10 mins</a><p></p>
         <a href="http://claimbits.io/?r=1GZ4P5eSm9WcUAX2ktNpLaJ3PaGnhzYmh1" class="w3-button w3-round w3-black" style="width:60%">Claimbits 1 sats 15 mins</a>
         <p></p>
