--- a/index.html
+++ b/index.html
@@ -280,14 +280,15 @@
         <a href="http://gobits.io/?r=1GZ4P5eSm9WcUAX2ktNpLaJ3PaGnhzYmh1" class="w3-button w3-round w3-teal" style="width:60%">Gobits 1 sats 15 mins</a><p></p>
 
 
-          </div></div><p>Reminder: Premium faucets provides more rewards without shortlinks. At least $0.0005 and their withdrawal limits are low too. So, they should be your first priority.</p>
+          </div></div>
+        <p>Reminder: Premium faucets provides more rewards without shortlinks. At least $0.0005 and their withdrawal limits are low too. So, they should be your first priority.</p>
 
 
   </div>
 
   <div class="panel" id="three-panel">
     <h4><font color=red>Bookmark us! All links opens in new tab.</font></h4>
-
+  <a href="https://freecoins.site/?r=saroj433@gmail.com" class="w3-button w3-round w3-teal" style="width:60%">$0.0033 Solana every </a><p></p>
 <p>Premium faucets have better rewarding shortlinks so none are further listed here.</p>
 
     </div>
