--- a/index.html
+++ b/index.html
@@ -270,6 +270,7 @@
 
         <div class="w3-container w3-border w3-border-red"> <center> <h4> Bitcoin FaucetPay</h4></center>
           <div class="w3-center">
+            <a href="https://coinhirek.com/free-bitcoin/?r=1GZ4P5eSm9WcUAX2ktNpLaJ3PaGnhzYmh1" class="w3-button w3-round w3-teal" style="width:60%">coinhirek 2+ sats 10 mins</a><p></p>
             <a href="https://www.bitcoinfaucet.network/home.html?r=1GZ4P5eSm9WcUAX2ktNpLaJ3PaGnhzYmh1" class="w3-button w3-round w3-black" style="width:60%">Faucet network 2 sats 5 mins</a>
            <p></p>
         <a href="https://www.coinfaucet.network/home.html?r=1GZ4P5eSm9WcUAX2ktNpLaJ3PaGnhzYmh1" class="w3-button w3-round w3-teal" style="width:60%">coin network 2 sats 5 mins</a><p></p>
@@ -288,7 +289,8 @@
 
   <div class="panel" id="three-panel">
     <h4><font color=red>Bookmark us! All links opens in new tab.</font></h4>
-  <a href="https://freecoins.site/?r=saroj433@gmail.com" class="w3-button w3-round w3-teal" style="width:60%">$0.0033 Solana every </a><p></p>
+  <a href="https://freecoins.site/?r=saroj433@gmail.com" class="w3-button w3-round w3-teal" style="width:60%">Freecoins.site $0.0033 Solana every 2 mins</a><p></p>
+ 
 <p>Premium faucets have better rewarding shortlinks so none are further listed here.</p>
 
     </div>
