--- a/index.html
+++ b/index.html
@@ -185,11 +185,11 @@
 
 
 
-    <div class="w3-container w3-border w3-border-red"> <center> <h4>Bitcoincuba Faucets</h4><p> High reward every 5 mins</p>
+    <div class="w3-container w3-border w3-border-red"> <center> <h4>Cryptofuture Faucets</h4><p> High reward every 5 mins</p>
 
       <div class="w3-bar">
              <a href="https://cryptofuture.co.in/btc?r=1GZ4P5eSm9WcUAX2ktNpLaJ3PaGnhzYmh1" class="w3-button w3-round w3-teal" style="width:20%">Bitcoin</a>
-          <a href="https://cryptofuture.co.in/eth/?r=0x2e436011f114c0bef3b953055fb6c98884cb33cb" class="w3-button w3-round w3-teal" style="width:20%">Ethereum</a>
+          <a href="https://cryptofuture.co.in/eth/?r=0x2e436011f114c0bef3b953055fb6c98884cb33cb" class="w3-button w3-round w3-black" style="width:20%">Ethereum</a>
     <a href="https://cryptofuture.co.in/litecoin/?r=LciR6UQtLEjKHQqW9L5apqcAffja44Rtjk" class="w3-button w3-round w3-teal" style="width:20%">Litecoin</a>
     <a href="https://cryptofuture.co.in/doge/?r=DH1DEuVudZM4sE66DwQj7geUTNFV9FpASe" class="w3-button w3-round w3-black" style="width:20%">Dogecoin</a><p></p>
     <a href="https://cryptofuture.co.in/solana?r=2ii7VHUYBNz3RWC5sSvxC9mgyc4kVtq62fyANLaYkYGd" class="w3-button w3-round w3-teal" style="width:20%">Solana</a>
