--- a/index.html
+++ b/index.html
@@ -340,7 +340,9 @@
 
 
 <center><a href="https://buxfire.co.uk/?rh=747361726F7A"><img
-src="https://buxfire.co.uk/images/banner1.gif" border="0" width="468" height="60"/></a>
+src="https://buxfire.co.uk/images/banner1.gif" border="0" width="468" height="60"/></a><br>
+  <a href=https://trxhourlyminer.com/?ref=tsaroz><img src="https://trxhourlyminer.com/images/banner_468.gif" alt="" width="468" height="60" /></a>
+
   <br><p>ccz.one @ 2021-2022</p><br>
 </center>
 <!-- Global site tag (gtag.js) - Google Analytics -->
