--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
 
 <center><a href="https://buxfire.co.uk/?rh=747361726F7A"><img
 src="https://buxfire.co.uk/images/banner1.gif" border="0" width="468" height="60"/></a><br>
-  <a href=https://trxhourlyminer.com/?ref=tsaroz><img src="https://trxhourlyminer.com/images/banner_125" alt="" width="125" height="125" /></a>
+  <a href=https://trxhourlyminer.com/?ref=tsaroz><img src="https://trxhourlyminer.com/images/125x125.gif" alt="" width="125" height="125" /></a>
 
 
   <br><p>ccz.one @ 2021-2022</p><br>
