--- a/index.html
+++ b/index.html
@@ -339,9 +339,8 @@
 <br>
 
 
-<center><a href="https://buxfire.co.uk/?rh=747361726F7A"><img
-                                                              src="https://buxfire.co.uk/images/banner1.gif" border="0" width="468" height="60"/></a><br><p></p>
-  <a href=https://trxhourlyminer.com/?ref=tsaroz><img src="https://trxhourlyminer.com/images/125x125.gif" alt="" width="125" height="125" /></a>
+<center><a href="https://betfury.io/?r=62ca54e292dea7a990c68228"><img src="/file/betfury.gif" width="468" height="60"></a><br><p></p>
+  <a href="https://buxfire.co.uk/?rh=747361726F7A"><img src="https://buxfire.co.uk/images/banner1.gif" border="0" width="468" height="60"/></a>
 
 
   <br><p>ccz.one @ 2021-2022</p><br>
