--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 
   <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"><h3>
 	<a href="https://neobits.net/?ref=793">10. Neobits</a></h3>
-      <p>$0.0012+ every 15 minutes PTC, Shortlinks, Offerwalls. Weekend bonus on firday, saturday and sunday.</p>
+      <p>$0.0012+ every 15 minutes PTC, Shortlinks, Offerwalls. Minimum cashout $0.2 to Faucetpay.</p>
     <a href="https://neobits.net/?ref=793"  target="_blank" >
 	<img src="/file/neobits.png" width="468" height="60"><br>  </a><p></p></div>
     
