--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@
 <br>
 
 
-<center><a href="https://betfury.io/?r=62ca54e292dea7a990c68228"><img src="/file/betfury.gif" width="468" height="60"></a><br><p></p>
+<center><a href="https://betfury.io/?r=62ca54e292dea7a990c68228"><img src="/file/betfury.gif" width="468" height="60"></a><br><p></p><iframe data-aa='1913695' src='//ad.a-ads.com/1913695?size=468x60' style='width:468px; height:60px; border:0px; padding:0; overflow:hidden; background-color: transparent;'></iframe>
 <p></p>
 
 
