--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="styles.css">
   <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
   <base target="_blank">
+  <meta name="admverifysite" content="40a3e9ad3cc35eb00646aea094150e8f" />
 </head>
 <body>
   <button onclick="topFunction()" id="myBtn" title="Go to top">Goto Top</button>
