--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <link rel="icon" type="image/x-icon" href="/file/favi.png">
   <meta name="keywords" content="Best, crypto, faucet, faucets, bitcoin, litecoin, dogecoin, earn, money, online, list, 2022">
   <meta name="description" content="The best daily updated list of crypto faucets. Earn free crypto without any investments. We have a curated list of high paying and reliable faucets all at one place. Watch advertisements to earn crypto.">
+  <meta name="surfe.pro" content="beca411571515c6064132455c5e35410">
   <link rel="stylesheet" href="styles.css">
   <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
   <base target="_blank">
