--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta name="keywords" content="Best, crypto, faucet, faucets, bitcoin, litecoin, dogecoin, earn, money, online, list, 2022">
   <meta name="description" content="The best daily updated list of crypto faucets. Earn free crypto without any investments. We have a curated list of high paying and reliable faucets all at one place. Watch advertisements to earn crypto.">
   <meta name="surfe.pro" content="beca411571515c6064132455c5e35410">
+  <meta name="cryptocoinsad" content="cryptocoinsad-47580" />
   <link rel="stylesheet" href="styles.css">
   <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
   <base target="_blank">
