--- a/index.html
+++ b/index.html
@@ -380,7 +380,8 @@
 <ins class="surfe-be" data-sid="346499"></ins> 
 <script>(adsurfebe = window.adsurfebe || []).push({});</script>
 
-  <br><p>ccz.one @ 2021-2022</p><br>
+  <center><a href="https://linkslot.ru/link.php?id=343517" target="_blank" rel="noopener">Купить ссылку здесь за <span id="linprice_343517"></span> руб.</a><div id="linkslot_343517" style="margin: 10px 0;"><script src="https://linkslot.ru/lincode.php?id=343517" async></script></div><a href="https://linkslot.ru/?ref=tsaroz" target="_blank" rel="noopener">Поставить к себе на сайт</a></center>
+  <p>ccz.one @ 2021-2022</p><br>
 </center>
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-PLYLYN29RX"></script>
