--- a/index.html
+++ b/index.html
@@ -376,7 +376,10 @@
         <a href="https://xixfaucet.xyz?r=1GZ4P5eSm9WcUAX2ktNpLaJ3PaGnhzYmh1" class="w3-button w3-round w3-teal" style="width:60%">Xixfaucet 10 sats BTC every 2 min</a><p></p>
   <a href="https://freecoins.site/?r=saroj433@gmail.com" class="w3-button w3-round w3-black" style="width:60%">Freecoins.site $0.0025 Solana every 2 mins</a><p></p>
        <a href="https://djfaucet.com/?r=1GZ4P5eSm9WcUAX2ktNpLaJ3PaGnhzYmh1" class="w3-button w3-round w3-teal" style="width:60%">DJfaucet 6 sats BTC every 1 min</a><p></p>
-         <a href="http://freesolanams.com/oldfaucet/?r=2ii7VHUYBNz3RWC5sSvxC9mgyc4kVtq62fyANLaYkYGd" class="w3-button w3-round w3-black" style="width:60%">MS solana $0.0019 Solana sats BTC every 1 min</a><p></p>
+         <a href="http://freesolanams.com/oldfaucet/?r=2ii7VHUYBNz3RWC5sSvxC9mgyc4kVtq62fyANLaYkYGd" class="w3-button w3-round w3-black" style="width:60%">MS solana $0.0019 Solana sats BTC every 1 min</a><p>
+       <a href="https://liteearn.com/?r=saroj433@gmail.com" class="w3-button w3-round w3-teal" style="width:60%">Liteearn $0.0015 LTC every 1 min</a><p></p>
+      
+      </p>
       </centre>
  
 
