--- a/index.html
+++ b/index.html
@@ -243,7 +243,8 @@
 
 
 
-       <div class="w3-container w3-border w3-border-red"> <center> <h4> High paying Bitcoin FaucetPay</h4></center>
+       <div class="w3-container w3-border w3-border-red"> <div class="w3-container w3-border w3-border-red">
+         <center> <h4> High paying Bitcoin FaucetPay</h4></center>
       <div class="w3-bar">
        
             <a href="https://www.bitcoinfaucet.network/home.html?r=1GZ4P5eSm9WcUAX2ktNpLaJ3PaGnhzYmh1" class="w3-button w3-round w3-black" style="width:60%">Faucet network 2 sats 5 mins</a>
