--- a/index.html
+++ b/index.html
@@ -243,14 +243,15 @@
 
 
 
-       <div class="w3-container w3-border w3-border-red"> <div class="w3-container w3-border w3-border-red">
-         <center> <h4> High paying Bitcoin FaucetPay</h4></center>
+   <div class="w3-container w3-border w3-border-red">
+         <center> <h4> High paying Bitcoin FaucetPay</h4>
       <div class="w3-bar">
        
             <a href="https://www.bitcoinfaucet.network/home.html?r=1GZ4P5eSm9WcUAX2ktNpLaJ3PaGnhzYmh1" class="w3-button w3-round w3-black" style="width:60%">Faucet network 2 sats 5 mins</a>
            <p></p>
         <a href="https://www.coinfaucet.network/home.html?r=1GZ4P5eSm9WcUAX2ktNpLaJ3PaGnhzYmh1" class="w3-button w3-round w3-teal" style="width:60%">coin network 2 sats 5 mins</a><p></p>
-             <a href="https://coinhirek.com/free-bitcoin/?r=1GZ4P5eSm9WcUAX2ktNpLaJ3PaGnhzYmh1" class="w3-button w3-round w3-black" style="width:60%">coinhirek 2+ sats 10 mins</a><p></p><p></p>
+             <a href="https://coinhirek.com/free-bitcoin/?r=1GZ4P5eSm9WcUAX2ktNpLaJ3PaGnhzYmh1" class="w3-button w3-round w3-black" style="width:60%">coinhirek 2+ sats 10 mins</a> </center><p></p></div>
+    <p></p>
 
       
     <div class="w3-container w3-border w3-border-red"> <center> <h4>Bitcoincuba Faucets</h4><p> $0.0005 worth of coins every 1 min</p>
