--- a/index.html
+++ b/index.html
@@ -378,7 +378,7 @@
     <center>
     <h4><font color=red>Bookmark us! All links opens in new tab.</font></h4>
         
-  <a href="https://freecoins.site/?r=saroj433@gmail.com" class="w3-button w3-round w3-black" style="width:60%">Freecoins.site 8 satoshi BTC every 2 mins</a><p></p>
+  <a href="https://djfaucet.com/?r=1GZ4P5eSm9WcUAX2ktNpLaJ3PaGnhzYmh1" class="w3-button w3-round w3-black" style="width:60%">djfaucet 8 satoshi BTC every 2 mins</a><p></p>
        <a href="https://freeltc.online?r=LciR6UQtLEjKHQqW9L5apqcAffja44Rtjk" class="w3-button w3-round w3-teal" style="width:60%">FreeLTC online $0.0016 LTC every 1 min</a><p></p>
        <a href="https://freeltc.online/bnb?r=1GZ4P5eSm9WcUAX2ktNpLaJ3PaGnhzYmh1" class="w3-button w3-round w3-black" style="width:60%">Freeltc bnb $0.0016+ BNB every 1 min</a><p></p>
        <a href="https://freeltc.online/btc?r=1GZ4P5eSm9WcUAX2ktNpLaJ3PaGnhzYmh1" class="w3-button w3-round w3-teal" style="width:60%">FreeBTC online 5sats+ BTC  every 1 min</a><p></p>
