--- a/index.html
+++ b/index.html
@@ -222,11 +222,11 @@
 
 
 
-   <div class="w3-container w3-border w3-border-red">
+   
 
 
       
-    <div class="w3-container w3-border w3-border-red"> <center> <h4>Bitcoincuba Faucets</h4><p> $0.0005 worth of coins every 1 min</p>
+    <div class="w3-container w3-border w3-border-red"> <center> <h4>Bitcoincuba Faucets</h4><p> $0.0005 worth of coins every 5 mins</p>
 
       <div class="w3-bar">
     <a href="https://bitcoincuba.net/freeltc/?r=LciR6UQtLEjKHQqW9L5apqcAffja44Rtjk" class="w3-button w3-round w3-teal" style="width:20%">Litecoin</a>
@@ -238,7 +238,7 @@
       </center><p></p></div>
     <p></p>
 
-         <center> <h4> High paying Bitcoin FaucetPay</h4>
+    <div class="w3-container w3-border w3-border-red">     <center> <h4> High paying Bitcoin FaucetPay</h4>
       <div class="w3-bar">
        
             <a href="https://www.bitcoinfaucet.network/home.html?r=1GZ4P5eSm9WcUAX2ktNpLaJ3PaGnhzYmh1" class="w3-button w3-round w3-black" style="width:60%">Faucet network 3 sats 5 mins</a>
