--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
         <a href="https://bitcoincuba.net/freeusdt/?r=TNuVALprCzXCadShuA37PEwdrK7kvQWeJf" class="w3-button w3-round w3-teal" style="width:20%">USDT</a>
           <a href="https://bitcoincuba.net/freetether/?r=TNuVALprCzXCadShuA37PEwdrK7kvQWeJf" class="w3-button w3-round w3-black" style="width:20%">USDT 1 min</a>
        <p></p></div>
-    <p></p>
+    <p></p></div>
 
 
 
