--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
     <a href="https://cryptorotator.website/zec_play/?r=saroj433@gmail.com" class="w3-button w3-round w3-teal" style="width:20%">Zcash</a>
 
        <p></p></div>
-<p></p>
+      <p></p></div>
 
     <div class="w3-container w3-border w3-border-red">  <h4> High paying FaucetPay</h4>
       <div class="w3-bar">
