--- a/index.html
+++ b/index.html
@@ -230,8 +230,8 @@
             <a href="https://bitcoincuba.net/freedoge/?r=DH1DEuVudZM4sE66DwQj7geUTNFV9FpASe" class="w3-button w3-round w3-black" style="width:20%">Dogecoin</a><p></p>
         <a href="https://bitcoincuba.net/freeusdt/?r=TNuVALprCzXCadShuA37PEwdrK7kvQWeJf" class="w3-button w3-round w3-teal" style="width:20%">USDT</a>
           <a href="https://bitcoincuba.net/freetether/?r=TNuVALprCzXCadShuA37PEwdrK7kvQWeJf" class="w3-button w3-round w3-black" style="width:20%">USDT 1 min</a>
-       <p></p></div>
-    <p></p></div>
+       <p></p></div></div>
+    <p></p>
 
 
 
@@ -246,8 +246,8 @@
     <a href="https://cryptorotator.website/dgb_play/?r=saroj433@gmail.com" class="w3-button w3-round w3-black" style="width:20%">Digibyte</a>
     <a href="https://cryptorotator.website/zec_play/?r=saroj433@gmail.com" class="w3-button w3-round w3-teal" style="width:20%">Zcash</a>
 
-       <p></p></div>
-      <p></p></div>
+       <p></p></div></div>
+      <p></p>
 
     <div class="w3-container w3-border w3-border-red">  <h4> High paying FaucetPay</h4>
       <div class="w3-bar">
