--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
     <a href="https://bagi.co.in/tether/?ref=47172" class="w3-button w3-round w3-teal" style="width:20%">USDT</a>
     <a href="https://bagi.co.in/ethereum/?ref=37373" class="w3-button w3-round w3-black" style="width:20%">Ethereum</a><p></p>
     <a href="https://bagi.co.in/feyorra/?ref=14565" class="w3-button w3-round w3-teal" style="width:20%">Feyyora</a>
-        <p></p></div>
+        <p></p></div></div>
       <p></p>
       <div class="w3-container w3-border w3-border-red">  <h4>Keran Faucets</h4><p> $0.0005 worth of coins every 60 mins. Needs to withdraw but can withdraw any amount anytime.</p>
 
@@ -292,7 +292,7 @@
       <a href="https://keran.co/USDT/?ref=68785" class="w3-button w3-round w3-teal" style="width:20%">USDT</a>
       <a href="https://keran.co/ETH/?ref=4476" class="w3-button w3-round w3-black" style="width:20%">Ethereum</a><p></p>
       <a href="https://keran.co/FEY/?ref=16732" class="w3-button w3-round w3-teal" style="width:20%">Feyyora</a>
-         <p></p></div>
+          <p></p></div></div>
         <p></p>
 
         <div class="w3-container w3-border w3-border-red">  <h4> Bitcoin FaucetPay</h4></center>
