--- a/index.html
+++ b/index.html
@@ -295,8 +295,8 @@
           <p></p></div></div>
         <p></p>
 
-        <div class="w3-container w3-border w3-border-red">  <h4> Bitcoin FaucetPay</h4></center>
-          <div class="w3-center">
+        <div class="w3-container w3-border w3-border-red">  <h4> Bitcoin FaucetPay</h4>
+           <div class="w3-bar">
         <a href="http://fautsy.com/?r=1GZ4P5eSm9WcUAX2ktNpLaJ3PaGnhzYmh1" class="w3-button w3-round w3-black" style="width:60%">Fautsy 1+ sats 10 mins</a><p></p>
         <a href="http://starbits.io/?r=1GZ4P5eSm9WcUAX2ktNpLaJ3PaGnhzYmh1" class="w3-button w3-round w3-teal" style="width:60%">Starbits 1 sats 10 mins</a><p></p>
         <a href="http://claimbits.io/?r=1GZ4P5eSm9WcUAX2ktNpLaJ3PaGnhzYmh1" class="w3-button w3-round w3-black" style="width:60%">Claimbits 1 sats 15 mins</a>
@@ -304,7 +304,7 @@
         <a href="http://gobits.io/?r=1GZ4P5eSm9WcUAX2ktNpLaJ3PaGnhzYmh1" class="w3-button w3-round w3-teal" style="width:60%">Gobits 1 sats 15 mins</a><p></p>
 
 
-          </div>
+          </div></div>
         <p>Reminder: Premium faucets provides more rewards without shortlinks. At least $0.0005 and their withdrawal limits are low too. So, they should be your first priority.</p>
 
 
