--- a/index.html
+++ b/index.html
@@ -320,12 +320,7 @@
       
             <a href="https://sol.djfaucet.com/?r=2ii7VHUYBNz3RWC5sSvxC9mgyc4kVtq62fyANLaYkYGd" class="w3-button w3-round w3-teal" style="width:60%">Dj faucet $0.0016 Solana every 1 min</a><p></p>
       
-   
-
-             <a href="https://freeltc.online/bnb?r=1GZ4P5eSm9WcUAX2ktNpLaJ3PaGnhzYmh1" class="w3-button w3-round w3-black" style="width:60%">Freeltc bnb $0.0016+ BNB every 1 min</a><p></p>
-       <a href="https://freeltc.online/btc?r=1GZ4P5eSm9WcUAX2ktNpLaJ3PaGnhzYmh1" class="w3-button w3-round w3-teal" style="width:60%">FreeBTC online 5sats+ BTC  every 1 min</a><p></p>
-         <a href="http://freesolanams.com/oldfaucet/?r=2ii7VHUYBNz3RWC5sSvxC9mgyc4kVtq62fyANLaYkYGd" class="w3-button w3-round w3-black" style="width:60%">MS solana $0.0019 Solana every 1 min</a><p>
-          <a href="https://liteearn.com/?r=saroj433@gmail.com" class="w3-button w3-round w3-black" style="width:60%">Liteearn $0.0015 LTC every 1 min</a><p></p>
+             <a href="https://liteearn.com/?r=saroj433@gmail.com" class="w3-button w3-round w3-black" style="width:60%">Liteearn $0.0015+ LTC every 1 min</a><p></p>
       </p>
       </centre>
  
