--- a/index.html
+++ b/index.html
@@ -313,7 +313,8 @@
   <div class="panel" id="three-panel">
     <center>
     <h4><font color=red>Bookmark us! All links opens in new tab.</font></h4>
-        
+    
+      <a href="https://mix-crypto.com/?r=1GZ4P5eSm9WcUAX2ktNpLaJ3PaGnhzYmh1" class="w3-button w3-round w3-black" style="width:60%">Mix Crypto 12 satoshi BTC every 1 min</a><p></p>
   <a href="https://djfaucet.com/?r=1GZ4P5eSm9WcUAX2ktNpLaJ3PaGnhzYmh1" class="w3-button w3-round w3-black" style="width:60%">djfaucet 11 satoshi BTC every 1 min</a><p></p>
        <a href="https://freeltc.online?r=LciR6UQtLEjKHQqW9L5apqcAffja44Rtjk" class="w3-button w3-round w3-teal" style="width:60%">FreeLTC online $0.002 LTC every 1 min</a><p></p>
 
