--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
       <a href="https://here-crypto.com/?r=1GZ4P5eSm9WcUAX2ktNpLaJ3PaGnhzYmh1" class="w3-button w3-round w3-black" style="width:60%">Here crypto 8 satoshi BTC every 1 min</a><p></p>
        <a href="https://freeltc.online?r=LciR6UQtLEjKHQqW9L5apqcAffja44Rtjk" class="w3-button w3-round w3-teal" style="width:60%">FreeLTC online $0.002 LTC every 1 min</a><p></p>
 
-      <a href="https://extra-crypto.com/?r=2ii7VHUYBNz3RWC5sSvxC9mgyc4kVtq62fyANLaYkYGd" class="w3-button w3-round w3-teal" style="width:60%">Extra Crypto $0.002 Solana every 1 min</a><p></p>
+      <a href="https://extra-crypto.com/?r=2ii7VHUYBNz3RWC5sSvxC9mgyc4kVtq62fyANLaYkYGd" class="w3-button w3-round w3-black" style="width:60%">Extra Crypto $0.002 Solana every 1 min</a><p></p>
             <a href="https://sol.djfaucet.com/?r=2ii7VHUYBNz3RWC5sSvxC9mgyc4kVtq62fyANLaYkYGd" class="w3-button w3-round w3-teal" style="width:60%">Dj faucet $0.0016 Solana every 1 min</a><p></p>
       
              <a href="https://liteearn.com/?r=saroj433@gmail.com" class="w3-button w3-round w3-black" style="width:60%">Liteearn $0.0015+ LTC every 1 min</a><p></p>
