--- a/index.html
+++ b/index.html
@@ -224,12 +224,12 @@
     <div class="w3-container w3-border w3-border-red">  <h4>Bitcoincuba Faucets</h4><p> $0.0005 worth of coins every 5 mins</p>
 
       <div class="w3-bar">
-    <a href="https://bitcoincuba.net/freeltc/?r=LciR6UQtLEjKHQqW9L5apqcAffja44Rtjk" class="w3-button w3-round w3-teal" style="width:20%">Litecoin</a>
-    <a href="https://bitcoincuba.net/freetrx/?r=TNuVALprCzXCadShuA37PEwdrK7kvQWeJf" class="w3-button w3-round w3-black" style="width:20%">Tron</a>
-    <a href="https://bitcoincuba.net/freeeth/?r=0x2e436011f114c0bef3b953055fb6c98884cb33cb" class="w3-button w3-round w3-teal" style="width:20%">Ethereum</a>
-            <a href="https://bitcoincuba.net/freedoge/?r=DH1DEuVudZM4sE66DwQj7geUTNFV9FpASe" class="w3-button w3-round w3-black" style="width:20%">Dogecoin</a><p></p>
-        <a href="https://bitcoincuba.net/freeusdt/?r=TNuVALprCzXCadShuA37PEwdrK7kvQWeJf" class="w3-button w3-round w3-teal" style="width:20%">USDT</a>
-          <a href="https://bitcoincuba.net/freetether/?r=TNuVALprCzXCadShuA37PEwdrK7kvQWeJf" class="w3-button w3-round w3-black" style="width:20%">USDT 1 min</a>
+    <a href="https://bitcoincuba.net/freeltc/?r=LciR6UQtLEjKHQqW9L5apqcAffja44Rtjk" class="w3-button w3-round w3-teal" style="width:30%">Litecoin</a>
+    <a href="https://bitcoincuba.net/freetrx/?r=TNuVALprCzXCadShuA37PEwdrK7kvQWeJf" class="w3-button w3-round w3-black" style="width:30%">Tron</a>
+    <a href="https://bitcoincuba.net/freeeth/?r=0x2e436011f114c0bef3b953055fb6c98884cb33cb" class="w3-button w3-round w3-teal" style="width:30%">Ethereum</a><p></p>
+            <a href="https://bitcoincuba.net/freedoge/?r=DH1DEuVudZM4sE66DwQj7geUTNFV9FpASe" class="w3-button w3-round w3-black" style="width:30%">Dogecoin</a>
+        <a href="https://bitcoincuba.net/freeusdt/?r=TNuVALprCzXCadShuA37PEwdrK7kvQWeJf" class="w3-button w3-round w3-teal" style="width:30%">USDT</a>
+          <a href="https://bitcoincuba.net/freetether/?r=TNuVALprCzXCadShuA37PEwdrK7kvQWeJf" class="w3-button w3-round w3-black" style="width:30%">USDT 1 min</a>
        <p></p></div></div>
     <p></p>
 
