--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
        <p></p></div></div>
     <p></p>
 
-
+  
 
     <div class="w3-container w3-border w3-border-red"> <h4>Cryptorotator Faucets</h4><p> $0.00045 worth of coins every 5 mins</p>
 
@@ -247,6 +247,20 @@
     <a href="https://cryptorotator.website/zec_play/?r=saroj433@gmail.com" class="w3-button w3-round w3-teal" style="width:20%">Zcash</a>
 
        <p></p></div></div>
+  
+    <div class="w3-container w3-border w3-border-red">  <h4>Claim free Faucets</h4><p>Random high reward with no timer but limited claim per day.</p>
+
+      <div class="w3-bar">
+    <a href="https://claimfreecoins.io/free-bitcoin/?r=1GZ4P5eSm9WcUAX2ktNpLaJ3PaGnhzYmh1" class="w3-button w3-round w3-teal" style="width:30%">Bitcoin</a>
+    <a href="https://claimfreecoins.io/free-dogecoin/?r=DH1DEuVudZM4sE66DwQj7geUTNFV9FpASe" class="w3-button w3-round w3-black" style="width:30%">Dogecoin</a>
+    <a href="https://claimfreecoins.io/free-litecoin/?r=LciR6UQtLEjKHQqW9L5apqcAffja44Rtjk" class="w3-button w3-round w3-teal" style="width:30%">Litecoin</a><p></p>
+            <a href="https://bitcoincuba.net/freedoge/?r=DH1DEuVudZM4sE66DwQj7geUTNFV9FpASe" class="w3-button w3-round w3-black" style="width:30%">Dogecoin</a>
+        <a href="https://claimfreecoins.io/free-tron/?r=TNuVALprCzXCadShuA37PEwdrK7kvQWeJf" class="w3-button w3-round w3-teal" style="width:30%">Tron</a>
+          <a href="https://claimfreecoins.io/free-binance/?r=TShfL4xianyXWBQssQLSkbGF6XPA1epUrr" class="w3-button w3-round w3-black" style="width:30%">BNB</a>
+        <a href="https://claimfreecoins.io/free-solana/?r=2ii7VHUYBNz3RWC5sSvxC9mgyc4kVtq62fyANLaYkYGd" class="w3-button w3-round w3-teal" style="width:30%">Solana</a>
+       <p></p></div></div>
+    <p></p>
+  
       <p></p>
 
     <div class="w3-container w3-border w3-border-red">  <h4> High paying FaucetPay</h4>
