--- a/index.html
+++ b/index.html
@@ -252,12 +252,18 @@
 
       <div class="w3-bar">
     <a href="https://claimfreecoins.io/free-bitcoin/?r=1GZ4P5eSm9WcUAX2ktNpLaJ3PaGnhzYmh1" class="w3-button w3-round w3-teal" style="width:30%">Bitcoin</a>
-    <a href="https://claimfreecoins.io/free-dogecoin/?r=DH1DEuVudZM4sE66DwQj7geUTNFV9FpASe" class="w3-button w3-round w3-black" style="width:30%">Dogecoin</a>
+    <a href="https://claimfreecoins.io/free-bitcoin-cash/?r=TShfL4xianyXWBQssQLSkbGF6XPA1epUrr" class="w3-button w3-round w3-black" style="width:30%">Bitcoincash</a>
     <a href="https://claimfreecoins.io/free-litecoin/?r=LciR6UQtLEjKHQqW9L5apqcAffja44Rtjk" class="w3-button w3-round w3-teal" style="width:30%">Litecoin</a><p></p>
             <a href="https://bitcoincuba.net/freedoge/?r=DH1DEuVudZM4sE66DwQj7geUTNFV9FpASe" class="w3-button w3-round w3-black" style="width:30%">Dogecoin</a>
         <a href="https://claimfreecoins.io/free-tron/?r=TNuVALprCzXCadShuA37PEwdrK7kvQWeJf" class="w3-button w3-round w3-teal" style="width:30%">Tron</a>
           <a href="https://claimfreecoins.io/free-binance/?r=TShfL4xianyXWBQssQLSkbGF6XPA1epUrr" class="w3-button w3-round w3-black" style="width:30%">BNB</a>
         <a href="https://claimfreecoins.io/free-solana/?r=2ii7VHUYBNz3RWC5sSvxC9mgyc4kVtq62fyANLaYkYGd" class="w3-button w3-round w3-teal" style="width:30%">Solana</a>
+        <a href="https://claimfreecoins.io/free-dash/?r=XcQosemyKiUgYYbGVmnvDDrC1N5ckYfqEf" class="w3-button w3-round w3-black" style="width:30%">Dash</a>
+        <a href="https://claimfreecoins.io/free-tether/?r=TShfL4xianyXWBQssQLSkbGF6XPA1epUrr" class="w3-button w3-round w3-teal" style="width:30%">USDT</a>
+        <a href="https://claimfreecoins.io/free-zcash/?r=t1eZVC8nHmTd6p2DC7m1EZYs2jH4dgGXsij" class="w3-button w3-round w3-black" style="width:30%">Zcash</a>
+        <a href="https://claimfreecoins.io/free-digibyte/?r=DPZNtGxt96i6hzLDentHrmjXftUyjbe7EQ" class="w3-button w3-round w3-teal" style="width:30%">Digibyte</a>
+        <a href="https://claimfreecoins.io/free-ethereum/?r=2ii7VHUYBNz3RWC5sSvxC9mgyc4kVtq62fyANLaYkYGd" class="w3-button w3-round w3-black" style="width:30%">Ethereum</a>
+        <a href="https://claimfreecoins.io/free-feyorra/?r=TShfL4xianyXWBQssQLSkbGF6XPA1epUrr" class="w3-button w3-round w3-teal" style="width:30%">Feyyora</a>
        <p></p></div></div>
     <p></p>
   
