--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
     
                  <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"> <h3>
                   <a href="https://banfaucet.com/?r=11036">7. Banfaucet</a></h3>
-                  <p>$0.005 every 5 mins. Doge, Banano, Matic, Tron, etc. $0.1 to FaucetPay or wallet. Daily bonus that gives coins+increased rewards. More rewards as you level up.</p>
+                  <p>$0.007+ every 10 mins. Doge, Banano, Matic, Tron, etc. $0.1 to FaucetPay or wallet. Daily bonus that gives coins+increased rewards. More rewards as you level up.</p>
                   <a target="_blank" href="https://banfaucet.com/?r=11036"><img src="/file/banfaucet.gif" width="468" height="60"></a><p></p></div>
     
  
