--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
     
            <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"><h3>
 	<a href="https://adsatosh.com/ref/tsaroz">7. AdSatosh</a></h3>
-      <p>High paying PTC ads. 2+ sathoshi every 15 minutes. Investment option. 200 satoshi minimum to Faucetpay.</p>
+      <p>High paying PTC ads. Faucet 2+ sathoshi every 15 minutes. 200 satoshi minimum to Faucetpay. Warning: Don't invest in this site any more. Our calculation tells the site is going to bust within a month. Still it's one of the highest paying PTC site with low withdrawal threshold.</p>
     <a href="https://adsatosh.com/ref/tsaroz"  target="_blank" >
 	<img src="/file/adSatosh.png" width="468" height="60"><br>  </a><p></p></div>
     
