--- a/index.html
+++ b/index.html
@@ -198,9 +198,9 @@
 
 
 
-    <div class="w3-container w3-border w3-border-red">  <h4> High paying FaucetPay</h4>
+    <div class="w3-container w3-border w3-border-red">  <h4> High paying FaucetPay Bitcoin</h4>
       <div class="w3-bar">
-         <a href="https://ltc.djfaucet.com/?r=LciR6UQtLEjKHQqW9L5apqcAffja44Rtjk" class="w3-button w3-round w3-black" style="width:60%">DJ LTC 200 sats 1 min</a><p></p>
+         
              <a href="https://coinhirek.com/free-bitcoin/?r=1GZ4P5eSm9WcUAX2ktNpLaJ3PaGnhzYmh1" class="w3-button w3-round w3-black" style="width:60%">coinhirek 2+ sats 10 mins</a><p></p>
                     <a href="https://www.bitcoinfaucet.network/home.html?r=1GZ4P5eSm9WcUAX2ktNpLaJ3PaGnhzYmh1" class="w3-button w3-round w3-black" style="width:60%">Faucet network 2 sats 10 mins</a>
        
