--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
       <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"> <h3>
         <a href="https://viefaucet.com?r=61e83d585cc8356fa4bda9a9">1. Vie Faucet</a></h3>
-             <p>$0.0005+ every 3 mins. Easy captcha. Daily bonus that gives rewards as well as increases the faucet value. Achievements for completing PTC ads, shortlinks, faucet claims. Daily happy hour where you earn 10% more rewards.</p>
+             <p>$0.0005+ every 3 mins. Easy captcha. Daily bonus that gives rewards as well as increases the faucet value. Achievements for completing PTC ads, shortlinks, faucet claims. Daily happy hour where you earn 10% more rewards. High paying shortlinks.</p>
         <a target="_blank" href="https://viefaucet.com?r=61e83d585cc8356fa4bda9a9" >
           <img src="/file/vie.png" width="468" height="60"/></a><br>
              <p></p></div>
@@ -263,9 +263,7 @@
     <center>
     <h4><font color=red>Bookmark us! All links opens in new tab.</font></h4>
     
-      <a href="https://djfaucet.com/?r=1GZ4P5eSm9WcUAX2ktNpLaJ3PaGnhzYmh1" class="w3-button w3-round w3-teal" style="width:60%">djfaucet 10 satoshi BTC every 1 min</a><p></p>
-      <a href="https://mix-crypto.com/?r=1GZ4P5eSm9WcUAX2ktNpLaJ3PaGnhzYmh1" class="w3-button w3-round w3-black" style="width:60%">Mix Crypto 12 satoshi BTC every 1 min</a><p></p>
- 
+
        <a href="https://freeltc.online?r=LciR6UQtLEjKHQqW9L5apqcAffja44Rtjk" class="w3-button w3-round w3-teal" style="width:60%">FreeLTC online $0.0018 LTC every 1 min</a><p></p>
 
       <a href="https://extra-crypto.com/?r=2ii7VHUYBNz3RWC5sSvxC9mgyc4kVtq62fyANLaYkYGd" class="w3-button w3-round w3-black" style="width:60%">Extra Crypto $0.002 Solana every 1 min</a><p></p>
@@ -273,6 +271,7 @@
       
              <a href="https://liteearn.com/?r=saroj433@gmail.com" class="w3-button w3-round w3-black" style="width:60%">Liteearn $0.0015+ LTC every 1 min</a><p></p>
       </p>
+    Note: Most of the premium faucet pays above $0.001 on shortlinks. They are more preferrable than these faucets.
       </centre>
  
 
