--- a/index.html
+++ b/index.html
@@ -61,6 +61,12 @@
       <a target="_blank" href="https://earnbitmoon.club/?ref=145452" >
       <img src="/file/ebm1.gif" width="468" height="60"/></a><br><p></p></div>
     
+    <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"> <h3>
+      <a href="https://claimercorner.xyz/web/?r=63714">4. ClaimerCorner</a></h3>
+      <p>$0.0005+ every 5 min. Daily bonus. $0.001 mad faucet every 3 hours. $0.001 withdrawal to FaucetPay and Coinbase. Higher reward as you level up.</p>
+      <a target="_blank" href="https://claimercorner.xyz/web/?r=63714" >
+      <img src="/file/cc.png" width="468" height="60"/></a><br><p></p></div>
+    
        <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"> <h3>
     <a href="https://r.adbtc.top/7297">4. Adbtc.top</a></h3>
     <p>High reward bitcoin PTC. 3000 sats withdrawal to FaucetPay. One of the longest paying bitcon site. 50+ satoshi daily.</p>
