--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
       <a href="https://claimercorner.xyz/web/?r=63714">4. ClaimerCorner</a></h3>
       <p>$0.0005+ every 5 min. Daily bonus. $0.001 mad faucet every 3 hours. $0.001 withdrawal to FaucetPay and Coinbase. Higher reward as you level up.</p>
       <a target="_blank" href="https://claimercorner.xyz/web/?r=63714" >
-      <img src="/file/cc.png" width="468" height="60"/></a><br><p></p></div>
+      <img src="/file/cc.gif" width="468" height="60"/></a><br><p></p></div>
     
        <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"> <h3>
     <a href="https://r.adbtc.top/7297">5. Adbtc.top</a></h3>
