--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
       <div class="w3-container w3-border w3-border-red">  <h4> High paying FaucetPay Bitcoin</h4>
       <div class="w3-bar">
          
-        <a href="https://btc25.org/?r=1795" class="w3-button w3-round w3-black" style="width:60%">btc25 4 sats 5 mins</a><p></p> 
+        <a href="https://btc25.org/?r=1GZ4P5eSm9WcUAX2ktNpLaJ3PaGnhzYmh1" class="w3-button w3-round w3-black" style="width:60%">btc25 4 sats 5 mins</a><p></p> 
         <a href="https://doge25.in/?r=9382" class="w3-button w3-round w3-black" style="width:60%">Doge25 3 sats 5 mins</a><p></p> 
         <a href="https://ltc25.in/?r=5452" class="w3-button w3-round w3-black" style="width:60%">LtC25 2 sats 4 mins</a><p></p> 
         <a href="https://coinhirek.com/free-bitcoin/?r=1GZ4P5eSm9WcUAX2ktNpLaJ3PaGnhzYmh1" class="w3-button w3-round w3-black" style="width:60%">coinhirek 2+ sats 10 mins</a><p></p>
