--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
     
     <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"> <h3>
                   <a href="https://faucetcrypto.net/?r=51613">11. Faucetcrypto.net</a></h3>
-                  <p>$0.006+ every 10 mins. D. $0.01 to FaucetPay. Shortlinks, ptc, achievements, offerwalls.</p>
+                  <p>$0.006+ every 10 mins. $0.01 to FaucetPay. Shortlinks, ptc, achievements, offerwalls.</p>
                   <a target="_blank" href="https://faucetcrypto.net/?r=51613"><img src="/file/fcn.png" width="468" height="60"></a><p></p></div>
     
 
