--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
   <img src="/file/cb1.gif" width="468" height="60"/></a><br>
    <p></p> </div>
     
-        <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"> <h3> <a href="https://coingax.com/?r=3494">15. Coinpot.in</a></h3><p>High paying PTC. High earning potential. No minimum payout to Faucetpay.</p>
+        <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"> <h3> <a href="https://coingax.com/?r=3494">15. Coingax</a></h3><p>High paying PTC. High earning potential. No minimum payout to Faucetpay.</p>
       <a target="_blank" href="https://coingax.com/?r=3494"><img src="/file/Coingax.png" width="468" height="60"></a>
       <p></p></div> 
         
