--- a/index.html
+++ b/index.html
@@ -183,10 +183,10 @@
 
   
 <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green">   <h3>
-<a href="https://rollercoin.com/?r=juwv6dm0">20. Rollercoin</a></h3>
-<p>Play games, earn coins passively. Virtual mining game.</p>
-<a target="_blank" href="https://rollercoin.com/?r=juwv6dm0" >
-<img src="/file/roller.gif" width="468" height="60"/></a><br><p></p></div>
+<a href="https://adviewsatoshi.com/ref/tsaroz">20. Adviewsatoshi</a></h3>
+<p>High paying PTC. Revenue on deposits 4% per day. Invest at your own risk. Instant payment to Faucetpay..</p>
+<a target="_blank" href="https://adviewsatoshi.com/ref/tsaroz" >
+<img src="/file/adview.png" width="468" height="60"/></a><br><p></p></div>
 
     </div>
 
