--- a/index.html
+++ b/index.html
@@ -57,14 +57,14 @@
 
     <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"> <h3>
       <a href="https://earnbitmoon.club/?ref=145452">3. Earnbitmoon</a></h3>
-      <p>$0.0005+ every 5 min. Easy captcha. PTC, Shortlinks, Offerwalls. $0.2 withdrawal to FaucetPay. They pay the most on offerwalls compared to other sites. Daily bonus upto $0.01  a day.</p>
+      <p>$0.0005+ every 5 min. Easy captcha. PTC, Shortlinks, Offerwalls. $0.2 withdrawal to FaucetPay, Payeer, Coinbase and wallet. They pay the most on offerwalls compared to other sites. Daily bonus upto $0.01  a day.</p>
       <a target="_blank" href="https://earnbitmoon.club/?ref=145452" >
       <img src="/file/ebm1.gif" width="468" height="60"/></a><br><p></p></div>
 
     
        <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"> <h3>
     <a href="https://r.adbtc.top/7297">4. Adbtc.top</a></h3>
-    <p>High reward bitcoin PTC. 3000 sats withdrawal to FaucetPay. One of the longest paying bitcon site. 50+ satoshi daily.</p>
+    <p>High reward bitcoin PTC. 3000 sats withdrawal to FaucetPay and Payeer. One of the longest paying bitcon site. 50+ satoshi daily.</p>
     <a target="_blank" href="https://r.adbtc.top/7297"><img src="/file/adbtc.jpg" width="468" height="60"></a>
     <p></p></div>
 
