--- a/index.html
+++ b/index.html
@@ -112,6 +112,12 @@
       <a target="_blank" href="https://claimercorner.xyz/web/?r=63714" >
       <img src="/file/cc.gif" width="468" height="60"/></a><br><p></p></div>
     
+    <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"><h3>
+<a href="https://cryptowin.io/ref/tsaroz">11. Cryptowin.io</a></h3>
+    <p>High paying PTC. 15 min faucet. Investment option. 300 satoshis minimum cashout to Faucetpay.</p>
+<a href="https://cryptowin.io/ref/tsaroz"  target="_blank" ><img src="/file/cwin.png" width="468" height="60"><br>  </a>
+    <p></p></div>
+    
         <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"><h3>
 <a href="https://btcadspace.com/ref/tsaroz">12. Btc Adspace</a></h3>
     <p>High paying PTC. 15 min faucet. Investment option. 100 satoshis minimum cashout to Faucetpay.</p>
