--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                          <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"> <h3>
                   <a href="https://claimbtc.cc/?r=18525">2. Claimbtc.cc</a></h3>
                   <p>$0.0055+ every 5 mins. Mad faucet $0.0015 every 1 min. Daily bonus, PTC, Shortlinks, Offerwalls. Minimum payout $0.001 to Faucetpay. Easy captcha.</p>
-                  <a target="_blank" href="https://claimbtc.cc/?r=18525"><img src="/file/claimbtccc" width="468" height="60"></a><p></p></div>
+                  <a target="_blank" href="https://claimbtc.cc/?r=18525"><img src="/file/claimbtccc.png" width="468" height="60"></a><p></p></div>
     
                      <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"> <h3>
                   <a href="https://banfaucet.com/?r=11036">3. Banfaucet</a></h3>
