--- a/index.html
+++ b/index.html
@@ -63,6 +63,11 @@
         <a target="_blank" href="https://feyorra.top/?r=180567" ><img src="/file/ftop.png" width="468" height="60"/></a><br>
         <p></p></div>
     
+                  <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"> <h3> <a href="https://coingax.com/?r=3494">4. Coingax</a></h3><p>2 satoshis every 5 min. Recaptcha V3. PTC, shortlinks, offerwalls. No minimum payout to Faucetpay.</p>
+      <a target="_blank" href="https://coingax.com/?r=3494"><img src="/file/Coingax.png" width="468" height="60"></a>
+      <p></p></div>
+
+    
                                  <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"> <h3>
                   <a href="https://claimbtc.cc/?r=18525">5. Claimbtc.cc</a></h3>
                   <p>$0.0055+ every 5 mins. Mad faucet $0.0015 every 1 min. Daily bonus, PTC, Shortlinks, Offerwalls. Minimum payout $0.001 to Faucetpay. Easy captcha.</p>
