--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
              <p></p></div>
     
                                      <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"> <h3>
-                  <a href="https://nokofaucet.com/sign-up?ref=647b39a94be69292a479fa75">2. Claimbtc.cc</a></h3>
+                  <a href="https://nokofaucet.com/sign-up?ref=647b39a94be69292a479fa75">2. Noko Faucet</a></h3>
                   <p>$0.005+ every 5 mins. Daily bonus, PTC, Shortlinks, Offerwalls. Minimum payout $0.005 to Faucetpay. Easy captcha.</p>
                   <a target="_blank" href="https://nokofaucet.com/sign-up?ref=647b39a94be69292a479fa75"><img src="/file/noko.png" width="468" height="60"></a><p></p></div>
     
