--- a/index.html
+++ b/index.html
@@ -225,12 +225,12 @@
  <a href="http://faucet-samy.xyz?r=1GZ4P5eSm9WcUAX2ktNpLaJ3PaGnhzYmh1" class="w3-button w3-round w3-teal" style="width:60%">Faucet Samy 8+ BTC every 2 mins</a><p></p>
 
 
-             <a href="https://claimro.com/?r=1GZ4P5eSm9WcUAX2ktNpLaJ3PaGnhzYmh1" class="w3-button w3-round w3-black" style="width:60%">Claimro 5 BTC every 2 mins</a><p></p>
+
       
       <a href="https://freeltc.online?r=LciR6UQtLEjKHQqW9L5apqcAffja44Rtjk" class="w3-button w3-round w3-teal" style="width:60%">FreeLTC online $0.0018 LTC every 1 min</a><p></p>
 
 
-             <a href="https://liteearn.com/?r=saroj433@gmail.com" class="w3-button w3-round w3-black" style="width:60%">Liteearn $0.0015+ LTC every 1 min</a><p></p>
+             <a href="https://liteearn.com/ref/6490" class="w3-button w3-round w3-black" style="width:60%">Liteearn $0.0015+ LTC every 1 min</a><p></p>
       
              <a href="https://claimcoins.net/?r=LciR6UQtLEjKHQqW9L5apqcAffja44Rtjk" class="w3-button w3-round w3-teal" style="width:60%">Claimcoins $0.0015 LTC every 1 min</a><p></p>
 
