--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                   <a target="_blank" href="https://banfaucet.com/?r=11036"><img src="/file/banfaucet.gif" width="468" height="60"></a><p></p></div>
     
         <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"> <h3><a href="https://crypto-farms.site/?r=2213">6. Crypto-farms</a></h3>
-             <p>$0.0006+ every 5 mins. Random happy hours with $0.00065. More rewards as you level up. Instant payment to Faucetpay starting $0.001.</p>
+             <p>$0.0006+ every 5 mins. PTC, tasks, shortlinks and offerwalls. More rewards as you level up. Instant payment to Faucetpay starting $0.001.</p>
         <a target="_blank" href="https://crypto-farms.site/?r=2213" >
           <img src="/file/cryptofarms.png" width="468" height="60"/></a><br>
              <p></p></div>
