--- a/index.html
+++ b/index.html
@@ -127,8 +127,8 @@
 </div>
 <div class="container">
   <div class="item">
-    <img src="image-placeholder.jpg" alt="Image Placeholder">
-    <h2>Title 1</h2>
+    <img src="https://viefaucet.com/img/logo.d2f5d906.png" alt="Viefaucet" style="width:100px;height:50px;">
+    <h2>Viefaucet</h2>
     <div class="description">
       <p>Description for Link 1...</p>
       <a href="#" class="button">Join now</a>
