--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 </div>
 <div class="container">
   <div class="item">
-    <img src="https://viefaucet.com/img/logo.d2f5d906.png" alt="Viefaucet" style="width:100px;height:50px;">
+    <img src="https://viefaucet.com/img/logo.d2f5d906.png" alt="Viefaucet">
     <h2>Viefaucet</h2>
     <div class="description">
       <p>Description for Link 1...</p>
