--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
   <div class="item">
     <img src="https://viefaucet.com/img/logo.d2f5d906.png" alt="Viefaucet">
     <h2>Viefaucet</h2>
-    <div class="description">
+    <div class="$0.0005+ every 5 mins">
       <p>Description for Link 1...</p>
       <a href="#" class="button">Join now</a>
     </div>
