--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
     }
   }
 </style>
-<title>Best Crypto Faucets List</title>
+<title>Best Crypto Faucet Lists</title>
 </head>
 <body>
 <div class="top-bar">
