--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
     </div>
   </div>
   <div class="item">
-    <img src="https://earnbitmoon.club/files/logo/logo_1627307903.gif" alt="Earnbitmoon">
+    <img src="/file/ebm.gif" alt="Earnbitmoon">
     <h2>Title 2</h2>
     <div class="description">
       <p>Description for Link 2...</p>
