--- a/index.html
+++ b/index.html
@@ -129,8 +129,10 @@
   <div class="item">
     <img src="/file/vie.png" alt="Viefaucet">
     <h2>Viefaucet</h2>
-    <div class="$0.0005+ every 5 mins">
-      <p>Description for Link 1...</p>
+    <div class="description">
+      <p>$0.00055 every 4 minutes.</p>
+      <p>High paying Shortlinks, Daily bonus, Daily coupon, PTC.</p>
+      <p>Low minimum payout to FaucetPay.</p>
       <a href="#" class="button">Join now</a>
     </div>
   </div>
