--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
     <h2>Viefaucet</h2>
     <div class="description">
       <p>$0.00055 every 4 minutes.</p>
-      <p>High paying Shortlinks, Daily bonus, Daily coupon, PTC.</p>
+      <p>High paying Shortlinks, Daily bonus, Daily coupon, Offerwalls, PTC.</p>
       <p>Low minimum payout to FaucetPay.</p>
       <a href="#" class="button">Join now</a>
     </div>
@@ -140,7 +140,9 @@
     <img src="/file/ebm.gif" alt="Earnbitmoon">
     <h2>Title 2</h2>
     <div class="description">
-      <p>Description for Link 2...</p>
+      <p>$0.0005+ every 5 minutes.</p>
+      <p>High paying Offerwalls. Daily Bonus, Shortlinks, PTC.</p>
+      <p>$0.2 minimum payout to FaucetPay, Payeer and Wallet.</p>
       <a href="#" class="button">Join now</a>
     </div>
   </div>
